Fix inconsistent horizontal alignment for time column

--- a/_sass/partials/_agenda.scss
+++ b/_sass/partials/_agenda.scss
@@ -14,8 +14,9 @@
 }
 
 .session-time {
-  display: inline;
+  display: inline-block;
   margin: 0 31px 0 0;
+  width: 51px;
   vertical-align: top;
 }
 
